<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coinchoid</string>
<string name="go">Jouer la donne !</string>
<string name="save_edit">Sauver</string>
<string name="hello">Hello World, CoincheActivity!</string>
<string name="lost">C\'est chu !</string>
<string name="menu_new_game">Nouvelle partie</string>
<string name="menu_preferences">Preferences</string>
<string name="planet_prompt">TOTO</string>
<string-array name="points">
<item>80</item>
<item>90</item>
<item>100</item>
<item>110</item>
<item>120</item>
<item>130</item>
<item>140</item>
<item>150</item>
<item>160</item>
<item>170</item>
<item>180</item>
<item>Capot</item>
</string-array>

<string name="win">C\'est fait !</string>
<string name="title_winning_score">Partie en ?</string>
<string name="summary_winning_score">Score à atteindre pour terminer la partie</string>
<string name="title_loose_160">Défaite à 160</string>
<string name="summary_on_loose_160">Partie chutée =&gt; 160 points pour l\'adversaire</string>
<string name="summary_off_loose_160">Partie chutée =&gt; points annoncés pour l\'adversaire</string>
<string name="title_wake_lock_enable">Mise en veille</string>
<string name="summary_on_wake_lock_enable">Empêche la veille</string>
<string name="summary_off_wake_lock_enable">Autorise la veille</string>

<string name="deal_won">faite</string>
<string name="deal_lost">chutée</string>
<string name="deal_summary">Partie %1$s,  de %2$d points.</string>


<string name="new_game">Nouvelle Partie</string>
<string name="quit">Quitter :(</string>
<string name="display_scores">Éditer Scores</string>
<string name="preferences">Préférences</string>
<string name="Us">Nous</string>
<string name="Them">Eux</string>

<string name="select_team">Please select a team</string>

<string name="uncoinched">Non coinché</string>
<string name="coinched">Coinché</string>
<string name="overcoinched">Surcoinché!</string>
<string name="shuffle_game">Mélangeante ?</string>


<string name="name_player1">Vous !</string>
<string name="name_player2">À gauche</string>
<string name="name_player3">Partenaire</string>
<string name="name_player4">À droite</string>
<string name="title_new_game">Nouvelle partie</string>
<string name="new_game_go">Start!</string>
<string name="better_to_string_us">pour nous</string>
<string name="better_to_string_them">pour eux</string>
<string name="who_take">Qui prend ?</string>
<string name="seekbar_announce">Annonce</string>
<string name="welcome">Bienvenue dans Coinchoid !\n</string>
<string name="to_fail">Pour faire chuter :</string>
<string name="to_win">Pour réussir :</string>
<string name="with_trumps">Tout Atout :</string>
<string name="without_trumps">Sans Atout :</string>
<string name="current_annouce">Annonce en cours :</string>
<string name="who_takes">Qui prend ? </string>
<string name="who_won">Qui a gagné ? </string>
<string name="distribution_start">Qui distribue en premier ?</string>
<string name="distribution_current">Qui distribue en ce moment ?</string>
<string name="title_system_preferences">Système</string>
<string name="title_score_preferences">Score</string>
<string name="summary_score_preferences">"Ces préférences ne sont prises en compte que lors d'une nouvelle partie"</string>
<string name="announce_difference">Écart à l\'annonce:</string>
<string name="preference_win_score">Points de victoire</string>
<string name="preference_win_score_summary">Pour une annonce réussie, combien de points sont gagnés</string>
<string name="announce_incr">+</string>
<string name="announce_decr">-</string>

<string name="force_counting_description">Forcer le système de comptage pour cette Partie à la valeur des préférences</string>
<string name="clear_names">"Noms par défaut"</string>
</resources>
