<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seekbar_announce" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/bet_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:max="11"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:progress="0" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

    <RadioGroup
        android:id="@+id/coinched_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_uncoinched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8dip"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dip"
                android:text="@string/uncoinched" />

        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_coinched"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_gravity="center"
                android:layout_marginBottom="-8dip"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dip"
                android:text="@string/coinched" />
        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RadioButton
                android:layout_marginBottom="-8dip"
                android:id="@+id/radio_overcoinched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dip"
                android:text="@string/overcoinched" />
        </LinearLayout>
    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/who_takes" />
        </RelativeLayout>

        <RadioGroup
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/button_Us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Us" />

            <RadioButton
                android:id="@+id/button_Them"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Them" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>